// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cn/cx/clsx > should test cnExt logic correctly 1`] = `
"const ButtonCnExt: React.FC<ButtonProps> = ({ children, className }) => {
        const buttonClasses = cnExt(
          (something === 'flex' || 'flex') && "kf-222f930b",
          ["kf-222f930b", "kf-222f930b"],
          something === 'flex' || something === 'flex' ? (something ? "kf-222f930b" : "kf-222f930b") : "kf-222f930b",
          className,
        );
        return <button className={buttonClasses}>{children}</button>;
      };"
`;

exports[`cn/cx/clsx > should transform correctly 1`] = `
"const ButtonCn: React.FC<ButtonProps> = ({ children, className }) => {
        const buttonClasses = cn(
          (something === 'flex' || 'flex') && "kf-222f930b",
          ["kf-222f930b", "kf-222f930b"],
          something === 'flex' || something === 'flex' ? (something ? "kf-222f930b" : "kf-222f930b") : "kf-222f930b",
          className,
        );
        return <button className={buttonClasses}>{children}</button>;
      };
      
      const ButtonCx: React.FC<ButtonProps> = ({ children, className }) => {
        const buttonClasses = cx(
          (something === 'flex' || 'flex') && "kf-222f930b",
          ["kf-222f930b", "kf-222f930b"],
          something === 'flex' || something === 'flex' ? (something ? "kf-222f930b" : "kf-222f930b") : "kf-222f930b",
          className,
        );
        return <button className={buttonClasses}>{children}</button>;
      };
      
      const ButtonClsx: React.FC<ButtonProps> = ({ children, className }) => {
        const buttonClasses = clsx(
          (something === 'flex' || 'flex') && "kf-222f930b",
          ["kf-222f930b", "kf-222f930b"],
          something === 'flex' || something === 'flex' ? (something ? "kf-222f930b" : "kf-222f930b") : "kf-222f930b",
          className,
        );
        return <button className={buttonClasses}>{children}</button>;
      };"
`;
